<resources>
    <string name="app_name">TrackAndTrace</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_menu_catalog_status">Status Catalog</string>
    <string name="title_activity_status">Status Catalog</string>

    <string name="lbl_name_user">Name User</string>
    <string name="lbl_last_name_user">Last Name</string>
    <string name="lbl_email">email@lcamx.com</string>
    <string name="lbl_pass">*****</string>
    <string name="lbl_rol">Role</string>

    <string name="action_menu_catalog_user">Users</string>
    <string name="action_menu_catalog_folio">Folios</string>
    <string name="action_menu_catalog_monitoring">Monitoring</string>
    <string name="title_activity_start">Start</string>
    <string name="action_start">Start</string>
    <string name="action_logOut">Log out</string>
    <string name="title_activity_folio">Folios</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_monitoring">Monitoring</string>

    <string name="action_munu_catalog_user">User Catalog</string>
    <string name="title_activity_user">User Catalog</string>
    <string name="title_activity_login">Go</string>

    <string name="txtFolioSeguimiento">2000001</string>
    <string name="lbl_source">Source</string>
    <string name="lbl_receiver">Receiver</string>
    <string name="lbl_source_set">este es un strin exagerado</string>
    <string name="lbl_receiver_set">este es un strin exagerado</string>
    <string name="lbl_to">--></string>

    <string name="txt_source_hint">México</string>
    <string name="txt_receiver_hint">USA</string>

    <string name="lbl_pickup">Pick UP</string>
    <string name="lbl_checkin">Checkin</string>
    <string name="lbl_onfly">On Fly</string>
    <string name="lbl_customclearance">Custom C</string>
    <string name="lbl_delivered">Delivered</string>

    <string name="title_folios">Folios</string>

    <string name="lbl_title">Search or new folio</string>
    <string name="lbl_autocomplete_folio">Search folio</string>
    <string name="lbl_newfolio">Register new Folio</string>
    <string name="lbl_beginning">Beginning</string>
    <string name="lbl_destination">Destination</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_followup">Follow up</string>

    <string name="lbl_btnback">Back</string>
    <string name="lbl_btnsave">Save</string>

    <string name="lbl_assignfolio">Assing Folio</string>
    <string name="lbl_autocompleteuser">Write some user here</string>
    <string name="lbl_autocompletefolio">Write some folio here</string>

    <string name="lbl_assignfolio">Assing Folio:</string>
    <string name="lbl_autocompleteuser">Write user here</string>
    <string name="lbl_pipe">|</string>

</resources>
